styles/style.css
/* ... */
@media (orientation: landscape) {
    .mobile-controls--section-text {
        position: relative;
    }
}

.mobile-controls--hidden {
    display: none;
}

.mobile-controls__nav {
    width: 15px;
    fill: #c2c2c2;
}

.mobile-controls__nav--prev {
    margin-right: auto;
}

.mobile-controls__nav--next {
    margin-left: auto;
}

.mobile-controls__nav svg {
    vertical-align: middle;
}

.mobile-controls__btn {
    width: 35px;
    margin: auto;
    padding: 0;
    border: none;
    background: none;
    fill: #c2c2c2;
}

.mobile-controls__btn--selected {
    fill: #fff;
}

.mobile-controls__btn svg {
    vertical-align: middle;
}

@media (min-width:900px) {
    .mobile-controls {
        display: none;
    }
}

.narration-player {
    flex: 0 0 auto;
    box-sizing: border-box;
    margin-right: 4.5rem;
    height: 2.5em;
    max-width: 25em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 0.5em;
    visibility: visible;
    transition: height 0.75s;
}

.narration-player--hidden {
    height: 0px;
    visibility: hidden;
    overflow: hidden;
    transition: height 0.75s, visibility 0s ease 0.75s;
}

.narration-player__playback-btn {
    flex: 0 0 auto;
    box-sizing: border-box;
    width: 2.5em;
    height: 2.5em;
    border-radius: 100px;
    border: none;
    padding: 0.75em;
    background: none;
    transition: box-shadow 0.25s;
}

@media (min-width:900px) {
    .narration-player__playback-btn:hover {
        box-shadow: 0px 0px 0 2px #fff;
    }
}

.narration-player__playback-btn-icon {
    width: 100%;
    height: 100%;
    stroke-width: 2;
    fill: none;
}

.narration-player__playback-btn-icon--section-text {
    stroke: #fff;
}

.narration-player__playback-btn-icon--modal {
    stroke: #000;
}

.narration-player__playback-btn-icon--hidden {
    display: none;
}

.narration-player__seekbar {
    flex: 1;
    min-width: 0;
    margin: 0 1em;
    -webkit-appearance: none;
    width: 15.5em;
    height: 2px;
    cursor: pointer;
}

.narration-player__seekbar--section-text {
    background: #fff;
}

.narration-player__seekbar--modal {
    background: #000;
}

.narration-player__seekbar::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 0.85em;
    height: 0.85em;
    border-radius: 100px;
}

.narration-player__seekbar--section-text::-webkit-slider-thumb {
    background: #fff;
}

.narration-player__seekbar--modal::-webkit-slider-thumb {
    background: #000;
}

.narration-player__time-display {
    flex: 0 0 auto
}

